When Material Options > Surface is active with complex node network, viewport slows down significantly #35051

Closed
opened 2013-04-22 02:50:19 +02:00 by Carlo Andreacchio · 5 comments

%%%--- Operating System, Graphics card ---
Windows 7, gtx 580

- Blender version with error, and version that worked ---

Buildbot : r55223 - Error
Buildbot : r56100 - Error
Buildbot : r46883 - Error

- Short description of error ---

significant viewport slowdown when surface info is visible in material settings on complex node networks

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Open Blender
  2. Open attached blend file
  3. Move viewport / node editor, look at the responsivity
  4. In material settings window, enable surface
  5. Move viewport / node editor, look at responsivity%%%
%%%--- Operating System, Graphics card --- Windows 7, gtx 580 - Blender version with error, and version that worked --- Buildbot : r55223 - Error Buildbot : r56100 - Error Buildbot : r46883 - Error - Short description of error --- significant viewport slowdown when surface info is visible in material settings on complex node networks - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Open Blender 2. Open attached blend file 3. Move viewport / node editor, look at the responsivity 4. In material settings window, enable surface 5. Move viewport / node editor, look at responsivity%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%To fix slowdown, switch out of material tab to something like the object data tab or physics tab or something... it seems that you can switch back to the material tab and viewport performance is still good... its just that first initial viewing of the surface material.
%%%

%%%To fix slowdown, switch out of material tab to something like the object data tab or physics tab or something... it seems that you can switch back to the material tab and viewport performance is still good... its just that first initial viewing of the surface material. %%%

%%%If you expand all node sockets in the material properties then indeed things will be slow, all I can suggest is to avoid doing that for complex node networks, viewing a graph as a tree view gives many duplicated nodes. Viewing the nodes is mainly meant for simple node setups or cases where you create group nodes to hide that complexity and present a simpler view in the material properties.

Navigating the 3D view shouldn't be causing the material properties to redraw though, will figure out why that happens.%%%

%%%If you expand all node sockets in the material properties then indeed things will be slow, all I can suggest is to avoid doing that for complex node networks, viewing a graph as a tree view gives many duplicated nodes. Viewing the nodes is mainly meant for simple node setups or cases where you create group nodes to hide that complexity and present a simpler view in the material properties. Navigating the 3D view shouldn't be causing the material properties to redraw though, will figure out why that happens.%%%

%%%There was a problem handling such huge panels, which was causing the properties editor to continuously redraw. Fix in svn now, thanks for the report.%%%

%%%There was a problem handling such huge panels, which was causing the properties editor to continuously redraw. Fix in svn now, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35051
No description provided.